...
                          'R\$ ${bagProvider.totalPrice().toStringAsFixed(2)}',
                          style: TextStyle(fontSize: 16.0),
                        ),
                      ),
                      ListTile(
                        title: Text(
                          'Entrega:',
                          style: TextStyle(
                            fontSize: 18.0,
                            fontWeight: FontWeight.bold,
                          ),
                        ),
                        trailing: Text(
...
                          ),
                        ),
                      ),
                      Padding(
                        padding: const EdgeInsets.all(16.0),
                        child: ElevatedButton(
                          key: Key('ConfirmarPedido'),
                          onPressed: () {
                            showOrderConfirmDialog(
                              context: context,
                              total: total,
                              bagProvider: bagProvider,
                              addressProvider: addressProvider,
...
